# forsch_frontiers

./: .gitignore  PROJECT.md  README.md  pyproject.toml
docs/: agent-graph-native-rebuild.md
docs/audits/: 2026-06-25-crm-ui-audit.md
docs/control-plane/: README.md  hooks-map.md  implementation-slices.md  references.md  spec.md  wireframe.md
docs/control-plane/prompts/: build-slice-1.md  probe-data-sources.md
docs/plans/: 2026-06-25-agent-detail-view-implementation.md  cerebras-dispatch.md  dispatch-prompts.md
docs/specs/: agent-detail-view.md  factory-reconciliation.md
forsch_frontiers/: __init__.py  hooks.py  modules.txt  patches.txt  permissions.py
forsch_frontiers/api/: __init__.py  _agent_box.py  agent_config.py  agent_factory.py  agent_tools.yaml  app_ops.py  cockpit.py  ingest.py  parity.py
forsch_frontiers/fixtures/: crm_fields_layout.json  crm_form_script.json  custom_docperm.json  custom_field.json  custom_html_block.json  role.json  web_page.json  workspace.json
forsch_frontiers/forsch_frontiers/doctype/ff_agent/: ff_agent.json  ff_agent.py
forsch_frontiers/page/agent_detail/: agent_detail.json
forsch_frontiers/patches/: add_agent_builder_shortcut.py
forsch_frontiers/patches/v0_0/: add_subscription_pair_unique_index.py
forsch_frontiers/public/css/: forsch-theme.css
forsch_frontiers/public/js/: forsch-easter.js
forsch_frontiers/sync/: agent_graph.py  listmonk.py  littlebird.py  postiz.py
forsch_frontiers/templates/: base.html
forsch_frontiers/tests/: test_scoped_access.py
(+24 files in other folders)
