[project]
name = "forsch_frontiers"
authors = [{ name = "Zachary Forsch", email = "forschzachary@gmail.com" }]
description = "Forsch Frontiers custom Frappe CRM app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
